--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-	<div class="profile" id="app">
+		<div class="profile" id="app">
 		<div class="col-md-2" style="margin:0 !important; padding:0 !important">
 			<div class="profile-sidebar">
 				<!-- SIDEBAR USERPIC -->
@@ -162,7 +162,7 @@
 												</div>
 												<div class="form-group">
 													<label for="telephone">Telephone</label>
-													<input type="number" id="telephone" class="form-control" v-model="telephone">
+													<input type="number" id="phone" class="form-control" v-model="telephone">
 												</div>
 												<div class="form-group">
 													<label for="role">Role</label>
@@ -202,14 +202,17 @@
 											<th>Name</th>
 											<th>Telephone</th>
 											<th>Role
-												<i class="fa fa-angle-up sorting" aria-hidden="true"  v-on:click="sortLowest"></i>
-												<i class="fa fa-angle-down sorting" aria-hidden="true" v-on:click="sortHighest"></i>
+												
+												<i class="fa fa-angle-down sorting" aria-hidden="true" v-on:click="sortHighest" style="font-size:20px;"></i>
+												<i class="fa fa-angle-up sorting" aria-hidden="true" v-on:click="sortLowest" style="font-size:20px;"></i>
 											</th>
 											<th colspan="2" class="text-center">Action</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr v-for="data in filteredListUser" :class="{editing: data == editedUser}" v-cloak>
+										<tr v-for="user in username"
+										>{{user}}</tr>
+										<tr v-for="data in datalist" :class="{editing: data == editedUser}" v-cloak>
 											<td>
 												<div class="view">
 													{{data.username}}
@@ -228,7 +231,7 @@
 											</td>
 											<td>
 												<div class="view">
-													{{data.telephone}}
+													{{data.phone}}
 												</div>
 												<div class="edit">
 													<input class="form-control" type="number" v-model="data.telephone"/>
@@ -281,5 +284,76 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+	<script>
+		new Vue({
+			el: '#app',
+			data:{
+				editMode: false,
+				editedUser: null,
+				username: "",
+				name: "",
+				phone: "",
+				role: "",
+				search: "",
+				datalist:[
+				{
+					username:"mdandyc",
+					name:"Muhammad Dandy",
+					phone:"08561324324",
+					role:"A"
+				},
+				{
+					username:"louisjohn",
+					name:"Louis John",
+					phone:"08561324324",
+					role:"B"
+				},
+				{
+					username:"Killa",
+					name:"Kiki Lala",
+					phone:"08561324324",
+					role:"A"
+				},
+				{
+					username:"OjiKino",
+					name:"Fakhroji Kino",
+					phone:"08561324324",
+					role:"C"
+				},
+				{
+					username:"AcaAca",
+					name:"Azhar Rio",
+					phone:"08561324324",
+					role:"B"
+				}
+				]
+			},
+			methods:{
+				addData: function(){
+					this.datalist.push({
+						username: this.username,
+						name: this.name,
+						telephone: this.telephone,
+						role: this.role,
+					});
+				},
+				sortLowest() {
+					this.datalist.sort((a, b) => a.role > b.role ? 1 : -1);
+				},
+				sortHighest() {
+					this.datalist.sort((a, b) => a.role < b.role ? 1 : -1);
+				},
+
+				editData (data) {
+					this.beforEditCache = data
+					this.editedUser = data
+				},
+				deleteEvent: function(data) {
+					this.datalist.splice(data, 1);
+				}
+			},
+		})
+	</script>
 </body>
 </html>
