--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
 					<!-- SIDEBAR USER TITLE -->
 					<div class="profile-usertitle">
 						<div class="profile-usertitle-name">
-							Marcus Doe
+							John Doe
 						</div>
 						<div class="profile-usertitle-job">
 							<div class="dropdown">
@@ -47,7 +47,7 @@
 				<div class="profile-usermenu">
 					<ul class="nav">
 						<li class="active" id="dashboard">
-							<a href="#">
+							<a href="dashboard.html">
 								<i class="mdi mdi-dashboard"></i>
 								Dashboard
 							</a>
@@ -64,8 +64,8 @@
 								Form 
 							</a>
 						</li>
-						<li>
-							<a href="#">
+						<li class="">
+							<a href="tables.html">
 								<i class="fa fa-table" aria-hidden="true"></i>
 								Table
 							</a>
@@ -82,22 +82,14 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-								<i class="fa fa-envelope icon-notif" aria-hidden="true"></i>
+								<i class="fa fa-envelope icon-notif" aria-hidden="true" style="font-size:20px;"></i>
 							</a>
 							<ul class="list-notificacao dropdown-menu">
 								<li id='item_notification_1'>
 									<div class="media">
 										<div class="media-body">
-											<h4 class="media-heading"><b>Subject</b></h4>
-											<p>This is message...</p>
-										</div>
-									</div>
-								</li>
-								<li id='item_notification_2'>
-									<div class="media">
-										<div class="media-body">
-											<h4 class="media-heading"><b>Subject</b></h4>
-											<p>This is message...</p>
+											<h4 class="media-heading"><b>Title</b></h4>
+											<p>Message Here</p>
 										</div>
 									</div>
 								</li>
@@ -105,8 +97,8 @@
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-								<i class="fa fa-bell icon-notif"></i>
-								<span class='badgeAlert'>1</span>
+								<i class="fa fa-bell icon-notif" style="font-size:20px;"></i>
+								<span class='badgeAlert'>5</span>
 							</a>
 							<ul class="list-notificacao dropdown-menu">
 								<li id='item_notification_1'>
@@ -125,7 +117,7 @@
 							</ul>
 						</li>
 						<li class="logout">
-							<a href="#"><i class="fa fa-sign-out icon-notif" aria-hidden="true"></i>
+							<a href="#"><i class="fa fa-sign-out icon-notif" aria-hidden="true" style="font-size:20px;"></i>
 								Logout
 							</a>
 						</li>
@@ -136,143 +128,16 @@
 				<div class="col-md-12">
 					<!-- LIST USER STARTS HERE -->
 					<br>
-					<div class="panel credit-card-box">
-						<div class="panel-heading display-table" >
-							<div class="row display-tr" >
-								<h3 class="panel-title" >List User</h3>
-							</div>
-
-							<!-- line modal -->
-							<div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-											<h3 class="modal-title" id="lineModalLabel">Input data</h3>
-										</div>
-										<div class="modal-body">
-											<form v-on:submit.prevent="addData">
-												<div class="form-group">
-													<label for="username">Username</label>
-													<input type="text" id="username" class="form-control" v-model="username">
-												</div>
-												<div class="form-group">
-													<label for="name">Name</label>
-													<input type="text" id="name" class="form-control" v-model="name">
-												</div>
-												<div class="form-group">
-													<label for="telephone">Telephone</label>
-													<input type="number" id="phone" class="form-control" v-model="telephone">
-												</div>
-												<div class="form-group">
-													<label for="role">Role</label>
-													<input type="text" id="role" class="form-control" v-model="role">
-												</div>
-												<button class="btn btn-info">Submit</button>
-												<button class="btn btn-info" type="button" data-dismiss="modal">Cancel</button>
-											</form>
-
-										</div>
-									</div>
-								</div>
-							</div> 
-
-							<div class="btn-create text-right">
-								<button type="button" data-toggle="modal" data-target="#squarespaceModal" class="btn btn-info btn-circle btn-lg"><i class="fa fa-plus" aria-hidden="true"></i></button>
-							</div>
+					<div class="row">
+						<div class="col-md-3 block-dashboard set te1 z-depth-1">
+							<p id="number">50</p><p id="txt">Login <br>Hit</p>
 						</div>
-						<div class="panel-body">
-							
-
-							<div class="col-md-3"><br>
-								<div class="input-group cari">
-									<span class="input-group-btn">
-										<button class="btn" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-									</span>
-									<input type="text" class="form-control" v-model="search" placeholder="Search">
-								</div><br>
-							</div>
-
-
-							<div class="col-md-12">
-								<table class="table table-hover table-responsive">
-									<thead>
-										<tr>
-											<th>Username</th>
-											<th>Name</th>
-											<th>Telephone</th>
-											<th>Role
-												
-												<i class="fa fa-angle-down sorting" aria-hidden="true" v-on:click="sortHighest" style="font-size:20px;"></i>
-												<i class="fa fa-angle-up sorting" aria-hidden="true" v-on:click="sortLowest" style="font-size:20px;"></i>
-											</th>
-											<th colspan="2" class="text-center">Action</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr v-for="user in username"
-										>{{user}}</tr>
-										<tr v-for="data in datalist" :class="{editing: data == editedUser}" v-cloak>
-											<td>
-												<div class="view">
-													{{data.username}}
-												</div>
-												<div class="edit">
-													<input class="form-control" type="text" v-model="data.username"/>
-												</div>
-											</td>
-											<td>
-												<div class="view">
-													{{data.name}}
-												</div>
-												<div class="edit">
-													<input class="form-control" type="text" v-model="data.name"/>
-												</div>
-											</td>
-											<td>
-												<div class="view">
-													{{data.phone}}
-												</div>
-												<div class="edit">
-													<input class="form-control" type="number" v-model="data.telephone"/>
-												</div>
-											</td>
-											<td>
-												<div class="view">
-													{{data.role}}
-												</div>
-												<div class="edit">
-													<input class="form-control" type="text" v-model="data.role"/>
-												</div>
-											</td>
-											<td class="text-center tombol-edit" @click="editData(data)">EDIT</td>
-											<td class="text-center tombol-delete" @click="deleteEvent(data)">DELETE</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-
-							<div class="col-md-12 paging">
-								<div class="row">
-									<div class="col-md-8 text-right">
-										Rows per page :
-									</div>
-									<div class="col-md-2">
-										<select class="form-control">
-											<option>5</option>
-											<option>10</option>
-											<option>20</option>
-										</select>
-									</div>
-									<div class="col-md-2">
-										<span class="halaman">1-5 of 1-10</span>
-										<i class="fa fa-angle-left" aria-hidden="true" style="font-size:35px;"></i>
-										<i class="fa fa-angle-right" aria-hidden="true" style="font-size:35px;"></i>
-									</div>
-								</div>
-							</div>
-						</div>            
-						<!-- LIST USER FORM ENDS HERE -->
+						<div class="col-md-3 block-dashboard2 set te2 z-depth-1">
+							<p id="number">50</p><p id="txt">Sales</p>
+						</div>
+						<div class="col-md-3 block-dashboard3 set te3 z-depth-1">
+							<p id="number">50</p><p id="txt">Top <br>Categories</p>
+						</div>
 					</div>
 				</div>
 			</div>
